<resources>
    <string name="app_name">Preston Cinema</string>
    <string name="app_full_name">Preston Cinema</string>
    <string name="action_info">Info</string>
    <string name="action_mqttsettings">MQTT</string>
    <string name="action_settings">Settings</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_firmwareupdates">FW Update (Bluetooth)</string>
    <string name="action_refreshcache">Refresh Bluetooth Cache</string>
    <string name="action_about">About</string>
    <string name="action_scan_for_devices">Scan for modules</string>
    <string name="action_my_devices">My devices</string>
    <string name="channel_name">Firmware Updates</string>
    <string name="channel_description">Notification to alert the user when a new firmware version is released.</string>
    <string name="dialog_error_no_ble">Bluetooth Low Energy not supported</string>
    <string name="dialog_error_no_bluetooth">Bluetooth not available</string>
    <string name="dialog_error_nolocationservices_requiredforscan_marshmallow">Android 6 requires that Location Services are enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>
    <string name="scan_scanbutton_scan">Scan for peripherals</string>
    <string name="scan_scanbutton_scanning">Scanning…</string>
    <string name="scan_devicesheadertitle">PERIPHERALS</string>
    <string name="scan_nodevicesfound">No peripherals found</string>
    <string name="scan_device_localname">Local Name</string>
    <string name="scan_device_address">Address</string>
    <string name="scan_device_rssi_notavailable">N/A</string>
    <string name="scan_device_connect">Connect</string>
    <string name="scan_device_uuid">UUID</string>
    <string name="scan_device_services">Service UUIDs</string>
    <string name="scan_device_txpower">TX Power Level</string>
    <string name="scan_device_viewadvraw">View raw data</string>
    <string name="scan_device_advertising_title">Advertising Raw Data</string>
    <string name="scan_device_beacon_manufacturer">Manufacturer</string>
    <string name="scan_device_beacon_major">Major</string>
    <string name="scan_device_beacon_minor">Minor</string>
    <string name="scan_device_uribeacon_uri">Uri</string>
    <string name="scan_connecting">Connecting…</string>
    <string name="scan_gettingupdateinfo">Waiting for device info…</string>
    <string name="scan_connectto_dialog_title_format">Choose mode to connect to %s</string>
    <string name="scan_unexpecteddisconnect">Peripheral disconnected</string>
    <string name="scan_tag_id">Id</string>
    <string name="scan_connectservice_info">Info</string>
    <string name="scan_connectservice_uart">UART</string>
    <string name="scan_connectservice_pinio">Pin I/O</string>
    <string name="scan_connectservice_controller">Controller</string>
    <string name="scan_connectservice_beacon">Beacon</string>
    <string name="scan_connectservice_neopixel">Neopixel</string>
    <string name="scan_softwareupdate_title">Update available</string>
    <string name="scan_softwareupdate_messageformat">Software version %s is available</string>
    <string name="scan_bootloaderandfirmwareupdate_messageformat">Software version %1$s and Bootloader version %2$s are available. This is a two-step process: bootloader will be updated first and firmware the next time you connect to the device</string>
    <string name="scan_softwareupdate_install">Install</string>
    <string name="scan_softwareupdate_notnow">Ask later</string>
    <string name="scan_softwareupdate_dontask">Ignore</string>
    <string name="scan_softwareupdate_downloaderror">Software download error</string>
    <string name="scan_softwareupdate_updateerror">Software update error</string>
    <string name="scan_softwareupdate_completed">Software updated successfully</string>
    <string name="scan_failedupdatedetected_title">Failed update detected</string>
    <string name="scan_failedupdatedetected_message">A failed update for this device has been detected.\nIt is strongly recommended to retry updating the device now</string>
    <string name="scan_failedupdatedetected_ok">Update now</string>
    <string name="scan_secondphaseupdatedetected_title">Continue update</string>
    <string name="scan_secondphaseupdatedetected_message">Firmware will be updated now</string>
    <string name="scan_secondphaseupdatedetected_ok">Continue</string>
    <string name="scan_filters_title_filter_format">Filter: %s</string>
    <string name="scan_filters_title_nofilter">No filter selected</string>
    <string name="scan_filters_name_rssi_format">Rssi >= %d</string>
    <string name="scan_filters_name_named">with name</string>
    <string name="scan_filters_name_uart">with UART</string>
    <string name="scan_filters_name_title">Name:</string>
    <string name="scan_filters_name_tip">Find by name</string>
    <string name="scan_filters_name_settings_contains">Name contains</string>
    <string name="scan_filters_name_settings_exact">Name equals</string>
    <string name="scan_filters_name_settings_casesensitive">Matching case</string>
    <string name="scan_filters_name_settings_caseinsensitive">Ignoring case</string>
    <string name="scan_filters_rssi_title">RSSI >=</string>
    <string name="scan_filters_rssi_value_format">%d dBM</string>
    <string name="scan_filters_unnamed">Show unnamed devices</string>
    <string name="scan_filters_onlyuart">Must have UART service</string>
    <string-array name="scan_devicetypes">
        <item>Unknown</item>
        <item>UART capable</item>
        <item>Beacon</item>
        <item>Eddystone</item>
    </string-array>
    <string name="title_activity_main">Preston Cinema</string>
    <string name="title_activity_main_colored"><font fgcolor="#FFFFFF">Preston </font><font fgcolor="#FF533D">Cinema </font><font fgcolor="#FFFFFF">Systems</font></string>
    <string name="firmware_button">Firmware Updates</string>
    <string name="lenses_button">Lens Management</string>
    <string name="scanning">Scanning...</string>
    <string name="swipe_to_refresh_devices">Pull to refresh</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting to module...</string>
    <string name="disconnecting">Disconnecting from module...</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_activity_mainhelp">Help</string>
    <string name="licenses_title">Licenses</string>
    <string name="title_activity_info">Info</string>
    <string name="info_item_service">Service</string>
    <string name="info_help_title">Info List Help</string>
    <string name="title_activity_firmware_info">My Firmware Versions</string>
    <string name="title_activity_firmware_update">Firmware Updates</string>
    <string name="firmware_update_instructions">
        Firmware updating instructions:\n\n
        Power up Preston unit in programming mode and plug in Bluetooth Module to unit\'s Serial port.\n\n
        Start app on mobile device and connect to the Bluetooth module (the \"Connected\" indicator in the app and LED on Bluetooth module should be blue).\n\n
        Click \"Firmware Updates\" button.\n\n
        The app will detect your device and display the currently installed version. Press \"Confirm\" to program the device.
    </string>
    <string name="firmware_update_instructions_see_below">Unit not detected? Preston Connect only supports firmware updates for the products listed below.\n\nClick for instructions to boot each unit up in programming mode.</string>
    <string name="firmware_files_on_device">The files listed below are stored on this device and can be loaded onto Preston units without an internet connection.</string>
    <string name="whats_new_in_firmware_version">What\'s new in this version: </string>
    <string name="update_hu3">1) Power off unit\n2) Hold down the Iris Set button\n3) Power on the HU3\n4) Release the Iris Set button\n\nIf done correctly, the HU3 display will show \"Ready to load\".</string>
    <string name="update_mdr2">1) Power off unit\n2) Hold down the Reset/Motor Cal button\n3) Plug in the power cable\n4) Release the Reset/Motor Cal button</string>
    <string name="update_mdr3">1) Power off unit\n2) Hold down the Reset/Motor Cal button\n3) Plug in the power cable\n4) Release the Reset/Motor Cal button</string>
    <string name="update_mdr4">1) Power off unit\n2) Hold down the Reset/Motor Cal button\n3) Plug in the power cable\n4) Release the Reset/Motor Cal button</string>
    <string name="update_vi">1) Power off unit\n2) Hold down the Menu button\n3) Plug in the power cable\n4) Release the Menu button</string>
    <string name="update_dxl">1) Power down DXL camera\n2) Hold down Reset/Motor Cal button on module\n3) Power on camera\n4) When module has booted up (radio channel number visible), release Reset/Motor Cal button</string>
    <string name="searching_for_unit">Searching for unit...\n\nMake sure unit is in programming mode</string>
    <string name="downloading_firmware_versions">Downloading the latest firmware versions...</string>
    <string name="no_modules_detected">No modules detected</string>
    <string name="help">Help</string>
    <string name="pref_help_contact_summary">Questions? Found a bug? Got a feature request? Click here to let us know so we can help you out!</string>
    <string name="pref_help_contact_title">Contact Support</string>
    <string name="about">About</string>
    <string name="pref_app_version_summary">App Version</string>
    <string name="send_to_hu3">Send to HU3</string>
    <string name="send_to_existing_list">Add to existing lens list</string>
    <string name="send_to_new_list">Create new lens list</string>
    <string name="confirm_lens_list_delete">Are you sure you want to delete this list?\nThis cannot be undone.</string>
    <string name="just_delete_list">Delete this list only (keep lenses in database)</string>
    <string name="delete_list_and_lenses">Delete this list and all its lenses</string>
    <string name="import_lenses_select_action">What would you like to do?</string>
    <string name="create_new_lens_list">Create new lens list</string>
    <string name="add_to_existing_lens_list">Add to existing lens list</string>
    <string name="all_lenses_menu_device">Device Info</string>
    <string name="all_lenses_menu_new">New Lens List</string>
    <string name="all_lenses_menu_import_from_hu3">Receive from HU3</string>
    <string name="all_lenses_menu_import">Import lens list</string>
    <string name="all_lenses_menu_delete">Delete all</string>
    <string name="all_lenses_menu_restore">Restore Default Lenses</string>
    <string name="settings_category_general">General</string>
    <string name="settings_remember_device_title">Remember connected devices</string>
    <string name="settings_remember_device_summary">Remember Bluetooth modules I\'ve connected to for auto-connect</string>
    <string name="settings_subscribe_to_firmware_updates_summary">Notify me when a new firmware version is available</string>
    <string name="settings_subscribe_to_firmware_updates_title">Firmware update notifications</string>
    <string name="settings_remember_and_autoconnect">Auto-connect to my remembered Bluetooth modules</string>
    <string name="settings_remember_title">Automatically reconnect</string>
    <string name="settings_category_reset">Reset</string>
    <string name="settings_pref_reset_title">Reset Preferences</string>
    <string name="settings_pref_reset_summmary">Restore default values for all settings</string>
    <string name="my_firmware_files">Firmware Versions</string>
    <string name="check_firmware_updates">Check for updates</string>
    <string name="show_version_histories">Firmware changelog</string>
    <string name="load_firmware_file">Import file...</string>
</resources>