<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prestoncinema.app.AllLensListsActivity">
    <group android:id="@+id/lensMenuGroup">
        <item
            android:id="@+id/deviceInfoMenuItem"
            android:title="@string/all_lenses_menu_device"
            android:icon="@drawable/ic_bluetooth_disabled_gray_24dp"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/importFromHu3MenuItem"
            android:title="@string/all_lenses_menu_import_from_hu3"
            android:icon="@drawable/ic_download_white_24dp"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/importFileMenuItem"
            android:title="@string/all_lenses_menu_import"
            app:showAsAction="never" />

        <item
            android:id="@+id/newLensListMenuItem"
            android:title="@string/all_lenses_menu_new"
            app:showAsAction="never" />

        <item
            android:id="@+id/restoreDefaultLensesMenuItem"
            android:title="@string/all_lenses_menu_restore"
            app:showAsAction="never" />
        <item
            android:id="@+id/deleteAllLensesMenuItem"
            android:title="@string/all_lenses_menu_delete"
            app:showAsAction="never" />
    </group>
</menu>