<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/settings_category_general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_remember_device"
            android:title="@string/settings_remember_device_title"
            android:summary="@string/settings_remember_device_summary" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_remember_and_autoconnect"
            android:summary="@string/settings_remember_and_autoconnect"
            android:title="@string/settings_remember_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_subscribe_to_firmware_updates"
            android:summary="@string/settings_subscribe_to_firmware_updates_summary"
            android:title="@string/settings_subscribe_to_firmware_updates_title" />

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="pref_updatesenabled"-->
            <!--android:summary="@string/settings_updatesenabled_summary"-->
            <!--android:title="@string/settings_updateenabled_title"/>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="pref_updatesversioncheck"-->
            <!--android:summary="@string/settings_pref_updatesversioncheck_summary"-->
            <!--android:title="@string/settings_pref_updatesversioncheck_title"/>-->

        <!--<EditTextPreference-->
            <!--android:dialogTitle="@string/settings_ignoredversion_edittitle"-->
            <!--android:key="pref_ignoredversion"-->
            <!--android:summary="@string/settings_ignoredversion_summary"-->
            <!--android:title="@string/settings_ignoredversion_title"/>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="pref_showbootloaders"-->
            <!--android:summary="@string/settings_pref_bootloaders_summary"-->
            <!--android:title="@string/settings_pref_bootloaders_title"/>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="pref_showbetaversions"-->
            <!--android:summary="@string/settings_pref_betaversions_summary"-->
            <!--android:title="@string/settings_pref_betaversions_title"/>-->

        <!--<EditTextPreference-->
            <!--android:dialogTitle="@string/settings_updateserver_edittitle"-->
            <!--android:key="pref_updateserver"-->
            <!--android:summary="@string/settings_updateserver_summary"-->
            <!--android:title="@string/settings_updateserver_title"/>-->
    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:key="pref_key_connectivity_settings"-->
        <!--android:title="@string/settings_category_connectivity">-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="pref_disableWifi"-->
            <!--android:summary="@string/settings_disablewifi_summary"-->
            <!--android:title="@string/settings_disablewifi_title"/>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="pref_resetble"-->
            <!--android:summary="@string/settings_resetble_summary"-->
            <!--android:title="@string/settings_resetble_title"/>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory-->
        <!--android:key="pref_key_bleinternal_settings"-->
        <!--android:title="@string/settings_category_bleinternal">-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="pref_recycleconnection"-->
            <!--android:summary="@string/settings_recyclebleconnection_summary"-->
            <!--android:title="@string/settings_recyclebleconnection_title"/>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="pref_forcecloseconnection"-->
            <!--android:summary="@string/settings_forcecloseconnection_summary"-->
            <!--android:title="@string/settings_forcecloseconnection_title"/>-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="pref_gattautoconnect"-->
            <!--android:summary="@string/settings_gattautoconnect_summary"-->
            <!--android:title="@string/settings_gattautoconnect_title"/>-->

        <!--&lt;!&ndash;-->
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="pref_refreshdevicecache"-->
            <!--android:summary="@string/settings_blerefresh_summary"-->
            <!--android:title="@string/settings_blerefresh_title"/>-->
<!--&ndash;&gt;-->

    <!--</PreferenceCategory>-->


    <!--<PreferenceCategory-->
        <!--android:key="pref_key_uart_settings"-->
        <!--android:title="@string/settings_category_uart">-->

        <!--<EditTextPreference-->
            <!--android:dialogTitle="@string/settings_uarttextmaxpackets_edittitle"-->
            <!--android:key="pref_uarttextmaxpackets"-->
            <!--android:numeric="integer"-->
            <!--android:summary="@string/settings_uarttextmaxpackets_summary_format"-->
            <!--android:title="@string/settings_uarttextmaxpackets_title"/>-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory
        android:key="pref_key_reset_settings"
        android:title="@string/settings_category_reset">
        <Preference
            android:key="pref_reset"
            android:summary="@string/settings_pref_reset_summmary"
            android:title="@string/settings_pref_reset_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_help_settings"
        android:title="@string/help">

        <Preference
            android:key="pref_help_contact"
            android:summary="@string/pref_help_contact_summary"
            android:title="@string/pref_help_contact_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_about"
        android:title="@string/about">

        <Preference
            android:key="pref_app_version"
            android:summary="@string/pref_app_version_summary"
            android:title="@string/app_version" />
    </PreferenceCategory>
</PreferenceScreen>