<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prestoncinema.app.FirmwareUpdateActivity">
    <group android:id="@+id/firmwareMenuGroup">
        <item
            android:id="@+id/myFirmwareFilesMenuItem"
            android:title="@string/my_firmware_files"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/firmwareVersionHistoryMenuItem"
            android:title="@string/show_version_histories"
            android:visible="false"
            app:showAsAction="never" />

        <item
            android:id="@+id/firmwareUpdateCheckMenuItem"
            android:title="@string/check_firmware_updates"
            app:showAsAction="never" />

        <item
            android:id="@+id/firmwareUpdateLoadFileMenuItem"
            android:title="@string/load_firmware_file"
            android:visible="false"
            app:showAsAction="never" />
    </group>
</menu>