<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/action_help"-->
        <!--android:icon="@drawable/ic_info_outline_menu"-->
        <!--android:title="@string/action_info"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan_for_devices"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_devices"
        android:orderInCategory="101"
        android:title="@string/action_my_devices"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <!--<item-->
        <!--android:id="@+id/action_licenses"-->
        <!--android:orderInCategory="102"-->
        <!--android:title="@string/action_licenses"-->
        <!--app:showAsAction="never"/>-->

</menu>
