<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_lens_list_delete"
        android:textColor="@color/darkestGray"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/lensListDeleteRadioGroup"
        android:checkedButton="@id/justDeleteListRadioButton">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/darkestGray"
            android:text="@string/just_delete_list"
            android:id="@+id/justDeleteListRadioButton"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/darkestGray"
            android:text="@string/delete_list_and_lenses"
            android:id="@+id/deleteListAndLensesRadioButton" />

    </RadioGroup>
</LinearLayout>