<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="45dp"
    android:paddingEnd="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/sendSelectedLensesToHU3"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_hu3"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/darkestGray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="@color/lightGray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/sendSelectedLensesToExistingList"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_existing_list"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/darkestGray"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="@color/lightGray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/sendSelectedLensesToNewList"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_new_list"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/darkestGray"/>
    </LinearLayout>

</LinearLayout>