<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"

    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="10dp"

    tools:context="com.prestoncinema.app.MainActivity">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:onClick="onClickScan"
        android:textColor="#ffffff"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noDevicesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@drawable/default_textcolor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:text="@string/scanning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/devicesFoundTextView"
                android:textColor="@color/white"
                android:visibility="visible"
                android:gravity="center_horizontal"/>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scannedDevicesListView"
                    android:divider="@color/lightGray"
                    android:dividerHeight="1dp">

                </ListView>
            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:id="@+id/mainButtonsLinearLayout"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:text="@string/firmware_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:id="@+id/FirmwareUpdateActivityButton"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_red"
                android:textSize="16sp"
                android:padding="15dp"
                android:onClick="goToFirmwareUpdateActivity" />

            <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Check Firmware Version"-->
                <!--android:layout_marginTop="60dp"-->
                <!--andrindexd:idindex@+id/CheckFirmwareActivityButton"-->
                <!--android:textColor="#FFFFFF"-->
                <!--android:background="#CC0000"-->
                <!--android:textSize="16sp"-->
                <!--android:onClick="goToFirmwareCheckActivity"/>-->

            <Button
                android:text="@string/lenses_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/LensActivityButton"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg_red"
                android:textSize="16sp"
                android:padding="15dp"
                android:onClick="goToLensTransferActivity"/>
        </LinearLayout>
    </RelativeLayout>

    <!--<Button-->
        <!--android:text="Not Connected"-->
        <!--android:background="#111111"-->
        <!--android:textColor="#666666"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:paddingRight="10dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="50dp"-->
        <!--andrindexd:idindex@+id/ConnectedButton"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:drawableRight = "@drawable/icon_disconnected"-->
        <!--android:drawablePadding="10dp"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/disconnected"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:textColor="@color/medGray"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:id="@+id/ConnectedTextView"
            android:textSize="18sp"
            android:drawableEnd = "@drawable/icon_disconnected"
            android:gravity="center" />
    </LinearLayout>
</RelativeLayout>